# TCWU-Thesis

./: README.md  pyproject.toml
Experiments/Dataset/: Create_Dataset.py  dataset.json  dataset_update.json
GAuGE/: ElectraScorer.py  GAuGE.py  MistralQA.py  index.py  main.py
Gen2IR/: ElectraScorer.py  Gen2IR.py  MistralQA.py  index.py  main.py
Proposed/: Embedding.py  FitnessValue.py  Generator.py  Proposed.py  Proposed_main.py  Qdrant.py
