[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
transformers = "^4.46.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
sentence-transformers = "^3.2.1"
qdrant-client = "^1.12.1"
ir-datasets = "^0.5.8"
sentencepiece = "^0.2.0"
datasets = "^3.2.0"
bm25s = "^0.2.6"
rouge-score = "^0.1.2"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
